# mapa-criminalidade-sp

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md  markers.ai  migrations.json  nx.json  package.json  prisma.config.ts  tsconfig.base.json
.github/workflows/: backend-ci.yml  cd.yml  ci.yml  frontend-ci.yml
apps/backend/: Dockerfile  Dockerfile.dockerignore  project.json  tsconfig.app.json  tsconfig.json  webpack.config.js
apps/backend/src/: main.ts  schema.gql
apps/frontend/: Dockerfile  Dockerfile.dockerignore  jest.config.ts  project.json  tsconfig.app.json  tsconfig.spec.json
apps/frontend-e2e/: playwright.config.ts
apps/frontend/src/: index.html  (+3 more)
backend/: .gitignore  Dockerfile  bun.lockb  package.json
backend/src/: app.module.ts  boletim.entity.ts  main.ts
database/: init
database/src/: clean_data.rs
dataset-handling/: Cargo.toml
dataset-handling/src/: analyzer.rs  cleaner.rs  converter.rs  database.rs  date_time.rs  headers.rs  importer.rs  logger.rs  main.rs  merger.rs  parallelism.rs  parquet_io.rs  parquet_postgres.rs  patterns.rs  sampler.rs  text_normalizer.rs  type_inference.rs  types.rs  utils.rs
dataset-handling/src/value_cleaners/: date.rs  general.rs  integer.rs  mod.rs  numeric.rs  time.rs
docker/: .gitignore  docker-compose.dev.yml  docker-compose.yml
docker/martin_config/: config.yaml
frontend/: Dockerfile  angular.json  bun.lockb  package.json  tsconfig.json
frontend/src/: index.html  styles.scss
prisma/: schema.prisma
shared-types/src/: index.ts
xlsx_to_csv/: Cargo.toml
xlsx_to_csv/src/: main.rs
(+233 files in other folders)
