[package]
name = "dataset-handling"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "59.0.0"
calamine = "0.20"
csv = "1.1"
chrono = "0.4"
clap = { version = "4.5.21", features = ["derive"] }
parquet = "59.0.0"
postgres = "0.19.13"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
sanitize-filename = "0.6.0"
rayon = "1.10.0"
regex = "1.10"
once_cell = "1.21.3"
